--- a/index.html
+++ b/index.html
@@ -32,6 +32,58 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <header class="header">
+        <div class="container">
+            <!-- Header Top -->
+            <div class="header-top">
+                <a href="/">
+                    <div class="logo">
+                        <span class="logo__circle"></span>
+                        <span class="logo__text">
+                            <span class="logo__brand">Shine</span>
+                            <span class="logo__brand logo__brand--small">smile</span>
+                        </span>
+                    </div>
+                </a>
+                <nav class="navbar">
+                    <ul class="navbar__list">
+                        <li class="navbar__item navbar__item--active">
+                            <a href="#" class="navbar__item--link">Home</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="#" class="navbar__item--link">Services</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="#" class="navbar__item--link">About</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a href="#" class="navbar__item--link">Doctors</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="header-action">
+                    <a href="#" class="header-action__login">Log In</a>
+                    <a href="#" class="btn header-action__signup">Sign Up</a>
+                </div>
+            </div>
+            <!-- Hero -->
+            <section class="hero">
+                <section class="hero__content">
+                    <h1 class="hero__heading">Exceptional dental care for all ages.</h1>
+                    <p class="hero__desc">Exceptional dental care for all ages. Your great smile begins with a great dentist.</p>
+                    <div class="hero__row">
+                        <a href="" class="btn">Book Online</a>
+                        <span class="hero__phone">or call (123) 456-7890</span>
+                    </div>
+                </section>
+                <div class="hero__media">
+                    <figure class="hero__images">
+                        <img src="./assets/img/hero-01.jpg" alt="" class="hero_img">
+                        <img src="./assets/img/hero-02.jpg" alt="" class="hero_img hero_img--small">
+                    </figure>
+                </div>
+            </section>
+        </div>
+    </header>
 </body>
 </html>
