--- a/index.html
+++ b/index.html
@@ -180,6 +180,111 @@
                 </div>
             </div>
         </section>
+
+        <section class="feature">
+            <div class="container">
+                <div class="feature__inner">
+                    <div class="feature__media">
+                        <figure class="feature__images">
+                            <img src="./assets/img/feature02.jpg" alt="" class="feature__img">
+                            <img src="./assets/img/feature03.jpg" alt="" class="feature__img feature__img--small">
+                        </figure>
+                    </div>
+                    <section class="feature__content">
+                        <h2 class="section-heading feature__heading">Take back your smile with shine.</h2>
+                        <p class="section-desc feature__desc">If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.</p>
+                        <a href="#" class="btn feature__btn">Learn More</a>
+                    </section>
+                </div>
+            </div>
+        </section>
+
+        <section class="member">
+            <div class="container">
+               <header class="member__header">
+                    <h2 class="section-heading">Our virtual dentist</h2>
+                    <a href="" class="btn member-cta">Meet our dentist</a>
+               </header>
+
+                <div class="member__list">
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/doctor01.png" alt="Dr. Essence Page" class="member-item__thumb">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>  
+                        <p class="member-item__desc">DDS, California - Linda University</p> 
+                    </article>
+
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/doctor02.png" alt="Dr. Essence Page" class="member-item__thumb">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>  
+                        <p class="member-item__desc">DDS, California - Linda University</p> 
+                    </article>
+
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/doctor03.png" alt="Dr. Essence Page" class="member-item__thumb">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>  
+                        <p class="member-item__desc">DDS, California - Linda University</p> 
+                    </article>
+
+                    <article class="member-item">
+                        <div class="member-item__img-bg">
+                            <img src="./assets/img/doctor04.png" alt="Dr. Essence Page" class="member-item__thumb">
+                        </div>
+                        <h3 class="member-item__name">Dr. Essence Page</h3>  
+                        <p class="member-item__desc">DDS, California - Linda University</p> 
+                    </article>
+                </div>
+
+                <div class="member__control">
+                    <button class="member__control-btn member__control-btn-left">
+                        <svg class="member__control-icon" width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1L0.5 6L5.5 11" stroke="" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>      
+                    </button>
+                    <button class="member__control-btn member__control-btn-right">
+                        <svg class="member__control-icon" width="6" height="12" viewBox="0 0 6 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M5.5 1L0.5 6L5.5 11" stroke="" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>   
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <section class="install">
+            <div class="container">
+                <div class="install-row">
+                    <figure class="install__image">
+                        <img src="./assets/img/install-img.png" alt="" class="install__img">
+                    </figure>
+                    <section class="install-info">
+                        <h2 class="section-heading install-heading">Take back your smile with dentures</h2>
+                        <p class="section-desc install-desc">If you’re missing multiple teeth due to decay, injury, or the natural aging process, dentures might be the perfect solution.</p>
+                        <div class="install-apps">
+                            <a href="#" class="install__item">
+                                <img src="./assets/img/Google Play logo.png" alt="" class="install__item-icon">
+                                <div>
+                                    <p class="install__item-desc">GET IT ON</p>
+                                    <p class="install__item-appname">Google Play</p>
+                                </div>
+                            </a>
+
+                            <a href="#" class="install__item">
+                                <img src="./assets/img/Apple logo.png" alt="" class="install__item-icon">
+                                <div>
+                                    <p class="install__item-desc">Download on the</p>
+                                    <p class="install__item-appname">App Store</p>
+                                </div>
+                            </a>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
